--- a/scss/_boxing.scss
+++ b/scss/_boxing.scss
@@ -1,4 +1,4 @@
-/*==========================VaRIOUS-BOXeS===========================*/
+/*==========================boxed items - will be named better (TO DO) ===========================*/
 
 .boxwrap {
     margin: 0 auto;
@@ -95,6 +95,8 @@
         display: none;
     }
 }
+
+//class that's added by js to hide title on portfolio page
 .disappearer {
   opacity:1.0;
   top:30%;
