--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,3 +1,6 @@
+/*========== Gravity Forms styling, as minimal as possible.===========*/
+/*===Use GUI to turn off CSS output from the plug-in to use this.=====*/
+
 .gform_wrapper {
 	overflow: inherit;
 	margin: 10px 0;
