--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -31,6 +31,18 @@ ul {
   }
 }
 
+hr {
+  border-top: 1px dotted $maincolor;
+  color: #fff;
+}
+
+strong {
+  font-weight:500;
+}
+
+
+/*========== Headings ==========*/
+
 h2,
 h3,
 h4 {
@@ -50,6 +62,8 @@ h1 {
   font-size: 3em;
   margin: 20px 0;
 }
+
+/*==========quotes==========*/
 
 blockquote:before {
   content: "\201C";
@@ -73,11 +87,3 @@ blockquote:after {
   font-weight: 900;
 }
 
-hr {
-  border-top: 1px dotted $maincolor;
-  color: #fff;
-}
-
-strong {
-  font-weight:500;
-}
