--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,9 +1,11 @@
-$maincolor:rgba(28, 28, 33, 0.94);
-$secondcolor: rgba(247, 247, 247, 0.83);
-$thirdcolor: rgba(185, 30, 23, 0.85);
+/*========== the color palette ==========*/
+
+$maincolor:   rgba(28, 28, 33, 0.94);
+$secondcolor: rgba(255, 253, 253, 0.94);
+$thirdcolor:  rgba(185, 30, 23, 0.85);
 $fourthcolor: rgba(52, 52, 52, 0.85);
 
-$buttoncolor: rgba(31, 71, 240, 0.69);
-$thirdtint: rgba(185,  30, 23, 0.45);
+$buttoncolor: rgba(31, 71, 240, 0.69); //colour of buttons pre-hover
+$thirdtint:   rgba(185,  30, 23, 0.45); //more transparent version of thirdcolor
 
-$texture: url("../img/build/14.png");
+$texture: url("../img/build/14.png"); //the lined bitmap texture
