--- a/scss/_galleries.scss
+++ b/scss/_galleries.scss
@@ -1,4 +1,5 @@
-/* Magnific Popup CSS */
+/*========== Styling for the galleries and magnific popup ==========*/
+
 .mfp-bg {
   top: 0;
   left: 0;
@@ -374,53 +375,55 @@ img.mfp-img {
   padding-top: 0; }
 
 
-div.popup-gallery {
-    text-align: center;
-    margin-bottom: 40px;
+/*========== Styles for ACF gallery output ==========*/
+
+.popup-gallery {
+  /*  text-align: center;
+  margin-bottom: 40px;*/
 }
 
-div.image-wrap {
-    width: 30%; /* Change this value to have your thumbnails laid out differently */
-    margin-bottom: 4px;
-    display: inline-block;
+.image-wrap {
+  width: 30%;/* Change this value to have your thumbnails laid out differently */
+  margin-bottom: 4px;
+  display: inline-block;
 }
 
-div.image-wrap img {
-    width: 100%;
+.image-wrap img {
+  width: 100%;
 }
 
 a.lightbox-link {
-    -webkit-transition: all 0.25s ease-in-out 0s;
-    -moz-transition: all 0.25s ease-in-out 0s;
-    -ms-transition: all 0.25s ease-in-out 0s;
-    -o-transition: all 0.25s ease-in-out 0s;
-    transition: all 0.25s ease-in-out 0s;
+  -webkit-transition: all 0.25s ease-in-out 0s;
+  -moz-transition: all 0.25s ease-in-out 0s;
+  -ms-transition: all 0.25s ease-in-out 0s;
+  -o-transition: all 0.25s ease-in-out 0s;
+  transition: all 0.25s ease-in-out 0s;
 }
 
 a.lightbox-link:hover {
-    -webkit-opacity: 0.8;
-    -khtml-opacity: 0.8;
-    -moz-opacity: 0.8;
-    -ms-opacity: 0.8;
-    -o-opacity: 0.8;
-    opacity: 0.8;
-    filter: alpha(opacity=80);
+  -webkit-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  -moz-opacity: 0.8;
+  -ms-opacity: 0.8;
+  -o-opacity: 0.8;
+  opacity: 0.8;
+  filter: alpha(opacity=80);
 }
 
 .image-wrap figcaption {
-    display: none;
+  display: none;
 }
 
 .mfp-bg figcaption {
-    display: block;
-    position: absolute;
+  display: block;
+  position: absolute;
 }
 
 .lb-title {
-    margin: 0.5em 0 0 0.5em;
+  margin: 0.5em 0 0 0.5em;
 }
 
 .lb-description {
-    margin-left: 0.6em;
-    width: 100%;
+  margin-left: 0.6em;
+  width: 100%;
 }
