--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,150 +1,156 @@
+.flex-friend {
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  height:100%;
+}
+
+@media screen and (max-width: 823px) {
+  .flex-friend{
+    height:auto;
+  }
+}
+
 .mainwrapper {
-    max-width: 71.5%;
-    position: relative;
-    margin-left: 26%;
-    margin-top: 2em;
-    color: $maincolor;
-    background: $secondcolor $texture;
+  max-width: 71.5%;
+  position: relative;
+  margin-left: 23%;
+  color: $maincolor;
+  background: $secondcolor $texture;
 }
 
 .mainwrapper h1 {
-    text-transform: uppercase;
-    padding: 10px 0 0 0;
-    margin: 0;
-    font-size:3em;
+  text-transform: uppercase;
+  padding: 10px 0 0 0;
+  margin: 0;
+  font-size: 3em;
 }
 
 @media screen and (max-width: 985px) {
-    .mainwrapper {
-        max-width: 100%;
-        margin: 0 auto;
-        top: 250px;
-    }
+  .mainwrapper {
+    max-width: 100%;
+    margin: 0 auto 300px;
+    top: 250px;
+  }
 }
 
 .pholder {
-    /*display: flex;
-  justify-content: center;
-  align-items: baseline;*/
-
-//    margin-bottom: 190px;
-    padding: 1.5em;
+  padding: 1.5em;
 }
 
 .pholder p {
-    line-height: 20px;
-    text-align: left;
-    padding: 0 2em 0.5em;
+  line-height: 23px;
+  text-align: left;
+  margin: 5px auto;
+  padding: 0px 5% 0px 0px;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 @media screen and (max-width: 600px) {
-    .pholder {
-      /* flex-direction: column-reverse;
+  .pholder {
+    /* flex-direction: column-reverse;
       align-items: none;*/
-    }
+  }
 }
 
 @media screen and (max-width: 985px) {
-    .logo {
-        display: none;
-    }
+  .logo {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 986px) {
-    #logo2 {
-        display: none;
-    }
+  #logo2 {
+    display: none;
+  }
 }
 
 #logo2 {
-    position: absolute;
-    top: 10px;
-    left: 10px;
-    z-index: 400;
-    opacity: 0.8;
-    img {
-        width: 120px
-    }
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  z-index: 400;
+  opacity: 0.8;
+  img {
+    width: 120px
+  }
 }
 
 .nextprev {
-    background: #333;
-    padding: 10px;
-    margin-bottom: 50px; //linked to footer height
-    color:#fff;
-
-  a{
-    color:#fff;
-     text-transform: uppercase;
-    letter-spacing:2px;
-    font-size:12px;
+  background: #333;
+  padding: 10px;
+  margin-bottom: 50px; //linked to footer height
+  color: #fff;
+  a {
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 12px;
   }
 }
 
 .gallery-wrapper {
-    max-width: 70%;
-    position: relative;
-    margin-left: 26%;
-    margin-top: 30px;
-    color: $maincolor;
+  max-width: 70%;
+  position: relative;
+  margin-left: 23%;
+  color: $maincolor;
 }
 
 .gallery-wrapper h1 {
-    text-transform: uppercase;
-    padding: 10px 0 0 0;
-    margin: 0;
+  text-transform: uppercase;
+  padding: 10px 0 0 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 985px) {
-    .gallery-wrapper {
-        max-width: 100%;
-        position: absolute;
-        margin: 0 auto;
-        top: 20%;
-    }
+  .gallery-wrapper {
+    max-width: 100%;
+    margin:0 auto;
+  }
 }
 
 .gallery-pholder {
-    display: flex;
-    justify-content: center;
-    align-items: baseline;
-    margin-bottom: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  margin-bottom: 50px;
 }
 
 .gallery-pholder p {
-    line-height: 20px;
-    text-align: left;
-    padding: 0 2em 0.5em;
+  line-height: 23px;
+  text-align: left;
+  padding: 0 2em 0.5em;
+  font-weight:300;
 }
 
 @media screen and (max-width: 600px) {
-    .gallery-pholder {
-        flex-direction: column-reverse;
-        align-items: none;
-    }
+  .gallery-pholder {
+    flex-direction: column-reverse;
+    align-items: none;
+  }
 }
 
 .portfolio-wrapper {
-    max-width: 100%;
-    position: relative;
-    margin-left: 24%;
-    margin-top: 10px;
-    margin-bottom: 80px;
-    color: $maincolor;
+  max-width: 100%;
+  position: relative;
+  margin-left: 24%;
+  margin-top: 10px;
+  color: $maincolor;
 }
 
 .portfolio-wrapper h1 {
-    text-transform: uppercase;
-    padding: 10px 0 0 0;
-    margin: 0;
+  text-transform: uppercase;
+  padding: 10px 0 0 0;
+  margin: 0;
 }
 
 @media screen and (max-width: 985px) {
-    .portfolio-wrapper {
-        max-width: 100%;
-        margin: 0 auto;
-        top: 20%;
-    }
+  .portfolio-wrapper {
+    max-width: 100%;
+    margin: 0 auto 200px;
+    top: 20%;
+  }
 }
 
 input.button {
@@ -152,24 +158,25 @@ input.button {
   color: #fff;
   border-radius: 10px;
   padding: 10px 20px;
-  margin-top:20px;
-  text-align:right;
-  font-size:1em;
-  text-transform:uppercase;
+  margin-top: 20px;
+  text-align: right;
+  font-size: 1em;
+  text-transform: uppercase;
 }
 
 .gfield_label {
-  font-style:normal;
-  text-align:left;
-  font-weight:normal !important;
-  font-size:13px;
-  text-transform:uppercase;
-  color:#fff;
-  padding:5px 10px;
-  background:$thirdcolor;
+  //for gravity forms
+  font-style: normal;
+  text-align: left;
+  font-weight: normal !important;
+  font-size: 13px;
+  text-transform: uppercase;
+  color: #fff;
+  padding: 5px 10px;
+  background: $thirdcolor;
 }
 
-input.button:hover{
+input.button:hover {
   cursor: pointer;
-  background:rgba(32, 20, 98, 0.81);
+  background: rgba(32, 20, 98, 0.81);
 }
