--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -7,5 +7,6 @@ $fourthcolor: rgba(52, 52, 52, 0.85);
 
 $buttoncolor: rgba(31, 71, 240, 0.69); //colour of buttons pre-hover
 $thirdtint:   rgba(185,  30, 23, 0.45); //more transparent version of thirdcolor
+$fourthtint:   rgba(78, 74, 74, 0.12);
 
 $texture: url("../img/build/14.png"); //the lined bitmap texture
