--- a/css/global.css
+++ b/css/global.css
@@ -1116,7 +1116,7 @@ blockquote:after {
 .portfolio-wrapper {
   max-width: 100%;
   position: relative;
-  margin-left: 24%;
+  margin-left: 25%;
   margin-top: 10px;
   color: rgba(28, 28, 33, 0.94); }
 
@@ -1545,7 +1545,8 @@ footer {
 .imgcatch {
   width: 100%;
   position: relative;
-  margin: 0 auto; }
+  margin: 0 auto;
+  transition: all 4s ease; }
 
 .imgcatch img {
   display: block;
@@ -1554,21 +1555,27 @@ footer {
   height: auto;
   transition: all 2s ease; }
 
+.imgcatch:hover {
+  background: rgba(78, 74, 74, 0.12) url("../img/build/14.png");
+  border-radius: 500px;
+  transition: all 4s ease; }
+
 .imgcatch img:hover {
   opacity: 0.5;
   transition: all 2s ease; }
 
 .centered-title {
-  width: 100%;
   position: absolute;
+  width: 100%;
   top: 0%;
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
   background: none repeat scroll 0% 0% rgba(185, 30, 23, 0.45);
-  padding: 10% 0;
   opacity: 0;
-  transition: all 1s ease; }
+  transition: all 1s ease;
+  font-family: brandon-grotesque;
+  margin: 1em 0; }
 
 .titlelay {
   top: 10px;
@@ -1600,6 +1607,9 @@ footer {
 .disappearer {
   opacity: 1.0;
   top: 30%; }
+
+.responsive_headline {
+  padding: 1em 0; }
 
 /*========== Styling for the galleries and magnific popup ==========*/
 .mfp-bg {
