--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -2,7 +2,7 @@
   display:flex;
   align-items:center;
   justify-content:center;
-  height:100%;
+  height:95%;
 }
 
 @media screen and (max-width: 823px) {
@@ -78,7 +78,7 @@
 }
 
 .nextprev {
-  background: #333;
+  background: $thirdcolor;
   padding: 10px;
   margin-bottom: 50px; //linked to footer height
   color: #fff;
@@ -173,7 +173,7 @@ input.button {
   text-transform: uppercase;
   color: #fff;
   padding: 5px 10px;
-  background: $thirdcolor;
+  background: rgba(4, 12, 59, 0.9) ;
 }
 
 input.button:hover {
