Add fade effect
creates the effect of the content fading out on scroll at medium and
small screen sizes

--- a/scss/_cv.scss
+++ b/scss/_cv.scss
@@ -51,6 +51,12 @@
   padding-right: 35px
 }
 
+@media screen and (max-width: 985px) {
+  .experience {
+    padding-right: 0;
+  }
+}
+
 .skills {
   padding: 0 0 0 2em;
   border-left:1px solid $thirdcolor;
