--- a/css/global.css
+++ b/css/global.css
@@ -603,7 +603,7 @@ blockquote:after {
   text-align: left;
   margin: 5px auto;
   padding: 0px 5% 0px 0px;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300; }
 
 @media screen and (max-width: 600px) {
@@ -708,6 +708,31 @@ input.button:hover {
   cursor: pointer;
   background: rgba(32, 20, 98, 0.81); }
 
+.top-screen {
+  height: 200px;
+  width: 98%;
+  background: -moz-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
+  /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, rgba(255, 255, 255, 0)));
+  /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
+  /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
+  /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
+  /* IE10+ */
+  background: linear-gradient(to bottom, white 0%, rgba(255, 255, 255, 0) 100%);
+  /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
+  /* IE6-9 */
+  z-index: 399;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+@media screen and (min-width: 985px) {
+  .top-screen {
+    display: none; } }
 /*========== Styling for the CV section ==========*/
 .cv {
   text-align: left;
@@ -748,6 +773,9 @@ input.button:hover {
   padding-bottom: 30px;
   padding-right: 35px; }
 
+@media screen and (max-width: 985px) {
+  .experience {
+    padding-right: 0; } }
 .skills {
   padding: 0 0 0 2em;
   border-left: 1px solid rgba(185, 30, 23, 0.85); }
