--- a/css/global.css
+++ b/css/global.css
@@ -65,6 +65,9 @@ blockquote.right {
   width: 33%;
   float: right; }
 
+.lead-image img {
+  max-width: 80%; }
+
 /*========== Gravity Forms styling, as minimal as possible.===========*/
 /*===Use GUI to turn off CSS output from the plug-in to use this.=====*/
 .gform_wrapper {
@@ -586,7 +589,7 @@ blockquote:after {
 
 .mainwrapper h1 {
   text-transform: uppercase;
-  padding: 10px 0 0 0;
+  padding: 10px 20px 0;
   margin: 0;
   font-size: 3em; }
 
@@ -596,14 +599,14 @@ blockquote:after {
     margin: 0 auto 300px;
     top: 250px; } }
 .pholder {
-  padding: 1.5em; }
+  padding: 0 3em 1.5em; }
 
 .pholder p {
   line-height: 23px;
   text-align: left;
   margin: 5px auto;
   padding: 0px 5% 0px 0px;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 300; }
 
 @media screen and (max-width: 600px) {
