--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -21,7 +21,7 @@
 
 .mainwrapper h1 {
   text-transform: uppercase;
-  padding: 10px 0 0 0;
+  padding:10px 20px 0;
   margin: 0;
   font-size: 3em;
 }
@@ -35,7 +35,7 @@
 }
 
 .pholder {
-  padding: 1.5em;
+  padding: 0 3em 1.5em;
 }
 
 .pholder p {
@@ -43,7 +43,7 @@
   text-align: left;
   margin: 5px auto;
   padding: 0px 5% 0px 0px;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 300;
 }
 
