--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -40,7 +40,7 @@
 
 .pholder p {
   line-height: 23px;
-  text-align: left;
+  text-align: justify;
   margin: 5px auto;
   padding: 0px 5% 0px 0px;
   font-size: 15px;
