--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name:porkfolio
 Theme URI: http://portfolio.blackroad.ie
-Description:side-scrolling slide based wordpress theme using superslides.js
+Description:slide based wordpress theme using superslides.js
 Author: Daniel Devine
 Version:0.1.2
 */
