--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -60,10 +60,16 @@ h1 {
 .multiline-title {
   line-height: 1em;
   font-size: 3em;
-  margin: 20px 0;
+  margin: 40px 0 20px;
+  color:$secondcolor;
 }
 
 /*==========quotes==========*/
+
+blockquote {
+  margin:0 auto;
+  font-size:15px;
+}
 
 blockquote:before {
   content: "\201C";
@@ -71,8 +77,8 @@ blockquote:before {
   font-size: 30px;
   line-height: 10px;
   vertical-align: bottom;
-  margin-left: -25px;
-  margin-right: 10px;
+  margin-left: -15px;
+  margin-right: 5px;
   font-weight: 900;
 }
 
@@ -82,8 +88,8 @@ blockquote:after {
   font-size: 30px;
   line-height: 10px;
   vertical-align: bottom;
-  margin-right: -25px;
-  margin-left: 10px;
+  margin-right: -15px;
+  margin-left: 5px;
   font-weight: 900;
 }
 
