--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,12 +2,12 @@
 
 $maincolor:   rgba(28, 28, 33, 0.94);
 $secondcolor: rgba(255, 253, 253, 0.94);
-$thirdcolor:  rgba(185, 30, 23, 0.85);
+$thirdcolor:  rgba(30, 148, 30, 0.85);
 $fourthcolor: rgba(52, 52, 52, 0.85);
 
 $buttoncolor: rgba(31, 71, 240, 0.69); //colour of buttons pre-hover
-$thirdtint:   rgba(185,  30, 23, 0.45); //more transparent version of thirdcolor
-$fourthtint:   rgba(78, 74, 74, 0.12);
+$thirdtint:   rgb(12, 52, 12); 
+$fourthtint:  rgba(78, 74, 74, 0.12);
 
 $texture: url("../img/build/14.png"); //the lined bitmap texture
 
