--- a/scss/_cv.scss
+++ b/scss/_cv.scss
@@ -29,13 +29,15 @@
   color: $maincolor;
   background: #fff;
   padding: 0 50px;
+  font-size:14px;
 }
 
 .cv-wrapper h1 {
   text-transform: uppercase;
-  padding: 10px 0 0 0;
+  padding: 10px 0 ;
   margin: 0;
   font-size: 3em;
+  line-height:1em;
 }
 
 @media screen and (max-width: 985px) {
@@ -68,7 +70,7 @@
 
 .cv-title {
   margin: 10px auto;
-  font-size: 25px;
+  font-size: 22px;
   font-weight: normal;
   color:$thirdcolor;
 }
