--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -30,7 +30,7 @@
   .mainwrapper {
     max-width: 100%;
     margin: 0 auto 300px;
-    top: 250px;
+    top: 100px;
   }
 }
 
@@ -39,11 +39,11 @@
 }
 
 .pholder p {
-  line-height: 23px;
+  line-height: 20px;
   text-align: justify;
   margin: 5px auto;
   padding: 0px 5% 0px 0px;
-  font-size: 15px;
+  font-size: 14 cpx;
   font-weight: 300;
 }
 
@@ -67,11 +67,12 @@
 }
 
 #logo2 {
-  position: absolute;
-  top: 10px;
-  left: 10px;
+  position: relative;
   z-index: 400;
-  opacity: 0.8;
+  margin:0 auto;
+  padding:15px 0;
+  background:$thirdcolor $texture;
+  box-shadow: 10px 0px 10px  #fff;
   img {
     width: 120px
   }
@@ -149,12 +150,12 @@
   .portfolio-wrapper {
     max-width: 100%;
     margin: 0 auto 200px;
-    top: 20%;
+    top: 0;
   }
 }
 
 input.button {
-  background: $buttoncolor;
+  background: $thirdcolor;
   color: #fff;
   border-radius: 10px;
   padding: 10px 20px;
@@ -162,6 +163,7 @@ input.button {
   text-align: right;
   font-size: 1em;
   text-transform: uppercase;
+  transition:all 1s ease;
 }
 
 .gfield_label {
@@ -171,22 +173,21 @@ input.button {
   font-weight: normal !important;
   font-size: 13px;
   text-transform: uppercase;
-  color: #fff;
-  padding: 5px 10px;
-  background: rgba(4, 12, 59, 0.9) ;
+  color: $thirdcolor;
 }
 
 input.button:hover {
   cursor: pointer;
-  background: rgba(32, 20, 98, 0.81);
+  background: $thirdtint;
+  transition:all 1s ease;
 }
 
 .top-screen {
-  height: 200px;
-  width:98%;
+  height: 150px;
+  width:100%;
   @include fade-color;
   z-index: 399;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
 }
