--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -104,7 +104,7 @@
     left: 0;
   }
 
-   .nav-toggle:before:active  {
+   .nav-toggle.active:before  {
     color:$secondcolor;
     background:$thirdcolor $texture;
     font-family: "fontawesome", sans-serif;
@@ -114,7 +114,7 @@
     font-size: 28px;
     text-transform: none;
     position: absolute;
-    content:  "X";
+    content:  "\f00d";
     text-indent: 0;
     text-align: center;
     line-height: 77px;
