--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -78,7 +78,7 @@
   margin:0 auto;
   padding:15px 0;
   background:$thirdcolor $texture;
-  box-shadow: 10px 0px 10px  #fff;
+  box-shadow: 0 40px 80px  #fff;
   img {
     width: 120px
   }
