--- a/scss/_boxing.scss
+++ b/scss/_boxing.scss
@@ -62,7 +62,7 @@
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: none repeat scroll 0% 0% $thirdtint;
+  background: none repeat scroll 0% 0% $thirdcolor;
   opacity: 0;
   transition: all 1s ease;
   border-radius: 200px;
