--- a/scss/_boxing.scss
+++ b/scss/_boxing.scss
@@ -62,11 +62,10 @@
   color: #fff;
   text-transform: uppercase;
   letter-spacing: 1px;
-  background: none repeat scroll 0% 0% $thirdcolor;
+  background: none repeat scroll 0% 0% $maincolor;
   opacity: 0;
   transition: all 1s ease;
   border-radius: 200px;
-  font-family: brandon-grotesque;
   margin: 1em 0;
 }
 
