--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,10 @@
 @font-face {
+  font-family: 'OpenSansRegular';
+  src: url("../fonts/OpenSans-Regular.eot");
+  src: url("../fonts/OpenSans-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/OpenSans-Regular.woff") format("woff"), url("../fonts/OpenSans-Regular.ttf") format("truetype"), url("../fonts/OpenSans-Regular.svg#OpenSansRegular") format("svg");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
   font-family: 'latolight';
   src: url("..../fonts/lato-lig-webfont.eot");
   src: url("../fonts/lato-lig-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/lato-lig-webfont.woff") format("woff"), url("../fonts/lato-lig-webfont.ttf") format("truetype"), url("../fonts/lato-lig-webfont.svg#latolight") format("svg");
@@ -1593,7 +1599,6 @@
 .fa-bomb:before {
   content: "\f1e2"; }
 
-/*========== the color palette ==========*/
 .entry-content img {
   margin: 0 auto 1.5em auto;
   max-width: 80%;
@@ -1705,7 +1710,7 @@ body {
   min-height: 500px;
   width: 100%;
   color: #333;
-  font-family: "latoregular";
+  font-family: "OpenSansRegular";
   background: rgba(255, 253, 253, 0.94) url("../img/build/14.png");
   text-align: center;
   overflow: hidden; }
@@ -1740,7 +1745,8 @@ h1 {
   font-family: "latohairline";
   font-style: normal;
   font-weight: 100;
-  margin: 0; }
+  margin: 0;
+  color: rgba(30, 148, 30, 0.85); }
 
 .multiline-title {
   line-height: 1em;
@@ -1750,8 +1756,9 @@ h1 {
 
 /*==========quotes==========*/
 blockquote {
-  margin: 0 auto;
-  font-size: 15px; }
+  margin: 10px 0 10px 2%;
+  font-size: 14px;
+  text-align: justify; }
 
 blockquote:before {
   content: "\201C";
@@ -1761,7 +1768,8 @@ blockquote:before {
   vertical-align: bottom;
   margin-left: -15px;
   margin-right: 5px;
-  font-weight: 900; }
+  font-weight: 900;
+  font-family: "latolight"; }
 
 blockquote:after {
   content: "\201D";
@@ -1771,7 +1779,8 @@ blockquote:after {
   vertical-align: bottom;
   margin-right: -15px;
   margin-left: 5px;
-  font-weight: 900; }
+  font-weight: 900;
+  font-family: "latolight"; }
 
 .flex-friend {
   display: flex;
@@ -1922,19 +1931,12 @@ input.button:hover {
   height: 150px;
   width: 100%;
   background: -moz-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
-  /* FF3.6+ */
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, white), color-stop(100%, rgba(255, 255, 255, 0)));
-  /* Chrome,Safari4+ */
   background: -webkit-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
-  /* Chrome10+,Safari5.1+ */
   background: -o-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
-  /* Opera 11.10+ */
   background: -ms-linear-gradient(top, white 0%, rgba(255, 255, 255, 0) 100%);
-  /* IE10+ */
   background: linear-gradient(to bottom, white 0%, rgba(255, 255, 255, 0) 100%);
-  /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 );
-  /* IE6-9 */
   z-index: 399;
   position: fixed;
   top: 0;
@@ -1956,17 +1958,20 @@ input.button:hover {
     font-weight: 100; }
   .cv h2 {
     font-weight: normal;
-    font-size: 18px;
-    margin-top: -10px; }
+    font-size: 24px;
+    margin-top: -10px;
+    color: rgba(28, 28, 33, 0.94); }
 
 .highlight {
-  color: rgba(30, 148, 30, 0.85); }
+  color: rgba(30, 148, 30, 0.85);
+  text-transform: uppercase; }
 
 .cv-wrapper {
   max-width: 71.5%;
   position: relative;
   margin-left: 26%;
   margin-top: 2em;
+  margin-bottom: 10em;
   color: rgba(28, 28, 33, 0.94);
   background: #fff;
   padding: 0 50px;
@@ -1976,7 +1981,7 @@ input.button:hover {
   text-transform: uppercase;
   padding: 10px 0;
   margin: 0;
-  font-size: 3em;
+  font-size: 3.8em;
   line-height: 1em; }
 
 @media screen and (max-width: 985px) {
@@ -1993,7 +1998,7 @@ input.button:hover {
     padding-right: 0; } }
 .skills {
   padding: 0 0 0 2em;
-  border-left: 1px solid rgba(30, 148, 30, 0.85); }
+  border-left: 1px dotted rgba(30, 148, 30, 0.85); }
 
 .skills ul {
   margin-bottom: 10px; }
@@ -2002,6 +2007,7 @@ input.button:hover {
   margin: 10px auto;
   font-size: 22px;
   font-weight: normal;
+  font-family: "latolight";
   color: rgba(30, 148, 30, 0.85); }
 
 /*========== fixed footer ==========*/
