--- a/scss/_cv.scss
+++ b/scss/_cv.scss
@@ -12,13 +12,15 @@
 
   h2 {
     font-weight: normal;
-    font-size: 18px;
+    font-size: 24px;
     margin-top: -10px;
+    color:$maincolor;
   }
 }
 
 .highlight {
   color: $thirdcolor;
+  text-transform:uppercase;
 }
 
 .cv-wrapper {
@@ -26,6 +28,7 @@
   position: relative;
   margin-left: 26%;
   margin-top: 2em;
+  margin-bottom:10em;
   color: $maincolor;
   background: #fff;
   padding: 0 50px;
@@ -36,7 +39,7 @@
   text-transform: uppercase;
   padding: 10px 0 ;
   margin: 0;
-  font-size: 3em;
+  font-size: 3.8em;
   line-height:1em;
 }
 
@@ -61,7 +64,7 @@
 
 .skills {
   padding: 0 0 0 2em;
-  border-left:1px solid $thirdcolor;
+  border-left:1px dotted $thirdcolor;
 }
 
 .skills ul {
@@ -72,5 +75,7 @@
   margin: 10px auto;
   font-size: 22px;
   font-weight: normal;
+  font-family: $light-face;
   color:$thirdcolor;
+
 }
